--- a/openvidu-testapp/src/app/components/video-track/video-track.component.html
+++ b/openvidu-testapp/src/app/components/video-track/video-track.component.html
@@ -1,15 +1,35 @@
 <div class="parent-div">
     <video #videoElement [id]="elementRefId" [ngClass]="getTrackOrigin()"></video>
     <div class="bottom-div">
-        <button *ngIf="localParticipant" (click)="muteUnmuteVideo()" class="video-btn" matTooltip="Mute/Unmute video"
+        <button *ngIf="localParticipant" (click)="muteUnmuteVideo()" class="video-btn mute-unmute-video" matTooltip="Mute/Unmute video"
             matTooltipClass="custom-tooltip">
             <mat-icon aria-label="Mute/Unmute video" class="mat-icon material-icons" role="img"
                 aria-hidden="true">{{muteVideoIcon}}</mat-icon>
         </button>
-        <button *ngIf="localParticipant" (click)="unpublishTrack()" class="video-btn" matTooltip="Unpublish track"
+        <button *ngIf="localParticipant" (click)="unpublishTrack()" class="video-btn publish-unpublish-video" matTooltip="Unpublish track"
             matTooltipClass="custom-tooltip">
             <mat-icon aria-label="Unpublish track" class="mat-icon material-icons" role="img"
                 aria-hidden="true">stop</mat-icon>
+        </button>
+        <button *ngIf="!localParticipant" (click)="toggleEnableTrack()" class="video-btn toggle-video-enabled" matTooltip="Toggle track enabled"
+            matTooltipClass="custom-tooltip">
+            <mat-icon aria-label="Toggle track enabled" class="mat-icon material-icons" role="img"
+                aria-hidden="true">{{trackEnabled ? 'toggle_off' : 'toggle_on'}}</mat-icon>
+        </button>
+        <button *ngIf="!localParticipant" (click)="toggleSubscribeTrack()" class="video-btn toggle-video-subscribed" matTooltip="Toggle track subscription"
+            matTooltipClass="custom-tooltip">
+            <mat-icon aria-label="Toggle track subscription" class="mat-icon material-icons" role="img"
+                aria-hidden="true">{{trackSubscribed ? 'stop' : 'play_arrow'}}</mat-icon>
+        </button>
+        <mat-form-field *ngIf="!localParticipant" id="max-video-quality" class="video-btn quality-option"  matTooltip="Set video quality" matTooltipClass="custom-tooltip">
+            <mat-select [(value)]="maxVideoQuality" (selectionChange)="onQualityChange()">
+              <mat-option *ngFor="let q of ['LOW', 'MEDIUM', 'HIGH']" [value]="q" [ngClass]="'mode-' + q">{{q}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button (click)="openInfoDialog()" class="video-btn video-track-info" matTooltip="Open info dialog"
+            matTooltipClass="custom-tooltip">
+            <mat-icon aria-label="Open info dialog" class="mat-icon material-icons" role="img"
+                aria-hidden="true">info</mat-icon>
         </button>
         <!--<button *ngIf="isLocal" (click)="blur()" class="video-btn">
             <mat-icon aria-label="Blur video" class="mat-icon material-icons" role="img"
