--- a/openvidu-testapp/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -155,7 +155,8 @@
       <mat-form-field id="trackPublish-scalabilityMode">
         <mat-label>scalabilityMode</mat-label>
         <mat-select [(value)]="trackPublishOptions.scalabilityMode">
-          <mat-option *ngFor="let mode of ['L1T1','L1T2','L1T3','L2T1','L2T1h','L2T1_KEY','L2T2','L2T2h','L2T2_KEY','L2T3','L2T3h','L2T3_KEY','L3T1','L3T1h','L3T1_KEY','L3T2','L3T2h','L3T2_KEY','L3T3','L3T3h','L3T3_KEY']" [value]="mode">{{mode}}</mat-option>
+          <mat-option *ngFor="let mode of ['L1T1','L1T2','L1T3','L2T1','L2T1h','L2T1_KEY','L2T2','L2T2h','L2T2_KEY','L2T3','L2T3h','L2T3_KEY','L3T1','L3T1h','L3T1_KEY','L3T2','L3T2h','L3T2_KEY','L3T3','L3T3h','L3T3_KEY']"
+            [value]="mode" [ngClass]="'mode-' + mode">{{mode}}</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field class="inner-text">
