--- a/openvidu-testapp/src/app/components/participant/participant.component.html
+++ b/openvidu-testapp/src/app/components/participant/participant.component.html
@@ -51,13 +51,11 @@
         </div>
         <div class="audio-tracks-container">
             <app-audio-track *ngFor="let trackPublication of participant.audioTrackPublications| keyvalue"
-                [trackPublication]="trackPublication.value" [audioTrack]="trackPublication.value.audioTrack"
-                [localParticipant]="localParticipant" [index]="index"
-                (newTrackEvent)="events.push($event)"></app-audio-track>
+                [index]="index" [trackPublication]="trackPublication.value" [track]="trackPublication.value.audioTrack"
+                [localParticipant]="localParticipant" (newTrackEvent)="events.push($event)"></app-audio-track>
         </div>
-        <app-video-track *ngFor="let trackPublication of participant.videoTrackPublications | keyvalue ; index as i"
-            [trackPublication]="trackPublication.value" [videoTrack]="trackPublication.value.videoTrack"
-            [localParticipant]="localParticipant" [index]="index"
-            (newTrackEvent)="events.push($event)" [attr.id]="'user-' + index + '-' + participant.identity + '-video-' + i"></app-video-track>
+        <app-video-track *ngFor="let trackPublication of participant.videoTrackPublications | keyvalue"
+            [index]="index" [trackPublication]="trackPublication.value" [track]="trackPublication.value.videoTrack"
+            [localParticipant]="localParticipant" (newTrackEvent)="events.push($event)"></app-video-track>
     </div>
 </div>
