ov-components: Allowed custom title on admin components

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/admin/admin-dashboard/admin-dashboard.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
 	<mat-toolbar class="header">
-		<span>{{ 'ADMIN.DASHBOARD_TITLE' | translate }}</span>
+		<span>{{ title || ('ADMIN.DASHBOARD_TITLE' | translate) }}</span>
 		<span class="toolbar-spacer"></span>
 
 		<button class="logout-btn" mat-icon-button aria-label="Refresh" (click)="logout()">
